--- a/src/index.css
+++ b/src/index.css
@@ -9,9 +9,64 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: #e5e5f7;
+  opacity: 0.8;
+  background-image:  repeating-radial-gradient( circle at 0 0, transparent 0, #e5e5f7 10px ), repeating-linear-gradient( #80709155, #807091 );
+  background-repeat: no-repeat;
+  height: 100vh;
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+* { 
+  transition-duration: .3s;
+}
+
+.incorrect { 
+  display: inline-flex; 
+padding-top: 0.75rem;
+padding-bottom: 0.75rem; 
+padding-left: 1.5rem;
+padding-right: 1.5rem; 
+margin-top: 0.5rem;
+margin-bottom: 0.5rem; 
+background-color: #ffffff; 
+color: #374151; 
+font-size: 1rem;
+line-height: 1.5rem; 
+font-weight: 500; 
+text-align: center; 
+justify-content: center; 
+align-items: center; 
+border-radius: 0.375rem; 
+border-width: 1px; 
+border-color: red; 
+background: red;
+box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.05); 
+}
+
+.correct { 
+  display: inline-flex; 
+padding-top: 0.75rem;
+padding-bottom: 0.75rem; 
+padding-left: 1.5rem;
+padding-right: 1.5rem; 
+margin-top: 0.5rem;
+margin-bottom: 0.5rem; 
+background-color: #ffffff; 
+color: #374151; 
+font-size: 1rem;
+line-height: 1.5rem; 
+font-weight: 500; 
+text-align: center; 
+justify-content: center; 
+align-items: center; 
+border-radius: 0.375rem; 
+border-width: 1px; 
+border-color: green; 
+background: green;
+box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.05); 
 }
