--- a/src/index.css
+++ b/src/index.css
@@ -21,7 +21,7 @@ body {
   background-size: "cover";
   height: 100vh;
   /* opacity: 0.5; */
-  background-position: 50% 50%;
+  background-position: 50% 0;
   background-repeat:no-repeat; 
 }
 
